fix: whitespace between radio buttons caused by inline-block

--- a/components/radio/style/index.less
+++ b/components/radio/style/index.less
@@ -13,6 +13,7 @@
 
   display: inline-block;
   line-height: unset;
+  font-size: 0;
 
   .@{ant-prefix}-badge-count {
     z-index: 1;
@@ -164,6 +165,7 @@ span.@{radio-prefix-cls} + * {
   height: @btn-height-base;
   margin: 0;
   padding: 0 @padding-md - 1px;
+  font-size: @font-size-base;
   color: @radio-button-color;
   line-height: @btn-height-base - 2px;
   background: @radio-button-bg;
